# employees-python-2024-11-12

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  constraints.txt  demos.md  mkdocs.yml  pylint_report.txt  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml
docs/: index.md  requirements.md
docs/images/: use-case.puml
docs/mkdocs/: index.md
employees/: docker-compose.yaml
mypy-reports/: index.txt
src/employees/: __init__.py  repo.py  restcontrollers.py  webcontrollers.py
src/employees/templates/: employees.html
test/e2e/: test_employees.py  test_employees_api.py  test_employees_ui.py
test/integration/: test_employees.py
test/unit/: test_restcontrollers.py
