# pyproject.toml

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "employees"
version = "1.0.0"
dependencies = [
    "Flask",
    "psycopg[binary,pool]",
    "Flask-WTF"
]

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "requests",
    "types-requests",
    "types-WTForms",
    "selenium",
    "webdriver-manager",
    "pre-commit",
    "lxml",
    "mypy",
    "pylint",
    "bandit",
    "ruff",
    "mkdocs",
    "pdoc"
]

[tool.mypy]
ignore_missing_imports = false

[tool.pylint]
disable = [
    "C0114", "C0115", "C0116"
]

[tool.bandit.assert_used]
skips = ['*/test_*.py']
